--- a/config.json
+++ b/config.json
@@ -1,12 +1,5 @@
 {
     "bot": {
-        "user": {
-            "clientId": "880483339994292264",
-            "presence": {
-                "status": "dnd",
-                "type": "PLAYING",
-                "name": "Sonic and the Black Knight"
-            }
-        }
+        "clientId": "880483339994292264"
     }
 }
