Added share command.

--- a/config.json
+++ b/config.json
@@ -1,5 +1,8 @@
 {
     "bot": {
         "clientId": "880483339994292264"
+    },
+    "testingGuild": {
+        "guildId": "880462579221278820"
     }
 }
