Added delete command.

--- a/config.json
+++ b/config.json
@@ -2,8 +2,17 @@
     "bot": {
         "clientId": "880483339994292264"
     },
-    "testingGuild": {
+    "guild": {
         "guildId": "880462579221278820"
+    },
+    "commands": {
+        "shareCommandId": "881223871607504917",
+        "deleteCommandId": "881793398992941086"
+    },
+    "roles": {
+        "rippersRoleId": "881492611641249802",
+        "moderationRoleId": "881492567320068106",
+        "moderationRoleName": "Moderation"
     },
     "colors": {
         "redColor": "ff0002"
