--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "srh-helper",
   "version": "1.0.0",
-  "description": "A Discord bot designed to help ease the process of sharing assets in the Sonic Ripping Hub.",
+  "description": "A Discord bot designed to help ease the process of sharing ripped assets in the Sonic Ripping Hub Discord server.",
   "main": "index.js",
   "scripts": {
     "test": "node index.js"
