--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "srh-helper",
-  "version": "1.1.2",
+  "version": "1.2.0",
   "description": "A Discord bot designed to help ease the process of sharing ripped assets in the Sonic Ripping Hub Discord server.",
   "main": "index.js",
   "scripts": {
@@ -27,14 +27,14 @@
   },
   "homepage": "https://github.com/barelyaiden/srh-helper#readme",
   "dependencies": {
-    "@discordjs/builders": "^0.6.0",
-    "@discordjs/rest": "^0.1.0-canary.0",
-    "discord-api-types": "^0.22.0",
-    "discord.js": "^13.1.0",
-    "sequelize": "^6.6.5",
-    "sqlite3": "^5.0.2"
+    "@discordjs/builders": "^0.13.0",
+    "@discordjs/rest": "^0.4.1",
+    "discord-api-types": "^0.33.0",
+    "discord.js": "^13.7.0",
+    "sequelize": "^6.20.0",
+    "sqlite3": "^5.0.8"
   },
   "devDependencies": {
-    "eslint": "^7.32.0"
+    "eslint": "^8.16.0"
   }
 }
