--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,8 +5,10 @@
         "node": true
     },
     "extends": "eslint:recommended",
+    "overrides": [
+    ],
     "parserOptions": {
-        "ecmaVersion": 12
+        "ecmaVersion": "latest"
     },
     "rules": {
         "indent": [
