--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,7 @@
 databases/*
-!databases/.gitkeep
 !databases/rippedAssets30-8-21.sqlite
 !databases/rippedAssets12-11-21.sqlite
 !databases/rippedAssets8-4-22.sqlite
+!databases/rippedAssets5-1-23.sqlite
 node_modules
-package-lock.json
-token.json
+.env
