--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "srh-helper",
-  "version": "1.2.0",
+  "version": "2.0.0",
   "description": "A Discord bot designed to help ease the process of sharing ripped assets in the Sonic Ripping Hub Discord server.",
   "main": "index.js",
   "scripts": {
-    "test": "node index.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
@@ -13,28 +13,23 @@
   "keywords": [
     "discord",
     "bot",
-    "discord.js",
-    "djs",
-    "sonic-ripping-hub",
-    "srh",
-    "srh-helper",
-    "barelyaiden"
+    "discordjs",
+    "sonic",
+    "srh"
   ],
   "author": "barelyaiden",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/barelyaiden/srh-helper/issues"
   },
   "homepage": "https://github.com/barelyaiden/srh-helper#readme",
   "dependencies": {
-    "@discordjs/builders": "^0.13.0",
-    "@discordjs/rest": "^0.4.1",
-    "discord-api-types": "^0.33.0",
-    "discord.js": "^13.7.0",
-    "sequelize": "^6.20.0",
-    "sqlite3": "^5.0.8"
+    "discord.js": "^14.7.1",
+    "dotenv": "^16.0.3",
+    "sequelize": "^6.28.0",
+    "sqlite3": "^5.1.4"
   },
   "devDependencies": {
-    "eslint": "^8.16.0"
+    "eslint": "^8.31.0"
   }
 }
