--- a/config.json
+++ b/config.json
@@ -6,6 +6,9 @@
         "moderationRoleId": "881492567320068106",
         "moderationRoleName": "Moderation"
     },
+    "channels": {
+        "botCommandsChannelId": "880464298302902282"
+    },
     "colors": {
         "redColor": "ff0002",
         "greenColor": "00ff0d",
