--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ databases/*
 !databases/rippedAssets12-11-21.sqlite
 !databases/rippedAssets8-4-22.sqlite
 !databases/rippedAssets5-1-23.sqlite
+!databases/rippedAssets12-2-23.sqlite
 node_modules
 .env
 asset_links.txt
