--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ databases/*
 !databases/rippedAssets8-4-22.sqlite
 !databases/rippedAssets5-1-23.sqlite
 !databases/rippedAssets12-2-23.sqlite
+!databases/rippedAssets23-10-23.sqlite
 node_modules
 .env
 asset_links.txt
