--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ databases/*
 !databases/rippedAssets5-1-23.sqlite
 !databases/rippedAssets12-2-23.sqlite
 !databases/rippedAssets23-10-23.sqlite
+!databases/rippedAssets26-10-24.sqlite
 node_modules
 .env
 asset_links.txt
