--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "srh-helper",
-  "version": "2.0.8",
+  "version": "2.0.9",
   "description": "A Discord bot designed to help ease the process of sharing ripped assets in the Sonic Ripping Hub Discord server.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node index.js"
   },
   "repository": {
     "type": "git",
@@ -24,12 +24,12 @@
   },
   "homepage": "https://github.com/barelyaiden/srh-helper#readme",
   "dependencies": {
-    "discord.js": "^14.8.0",
-    "dotenv": "^16.0.3",
-    "sequelize": "^6.28.0",
-    "sqlite3": "^5.1.4"
+    "discord.js": "^14.16.3",
+    "dotenv": "^16.4.5",
+    "sequelize": "^6.37.5",
+    "sqlite3": "^5.1.7"
   },
   "devDependencies": {
-    "eslint": "^8.34.0"
+    "eslint": "^9.13.0"
   }
 }
